--- a/www/index.html
+++ b/www/index.html
@@ -6,10 +6,34 @@
 <link href="js/jquery.mobile-1.0.min.css" rel="stylesheet" type="text/css"/>
 <script src="js/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="js/jquery.mobile-1.0.min.js" type="text/javascript"></script>
+<script type="text/javascript" charset="utf-8" src="js/cordova.js"></script>
+<script type="text/javascript" charset="utf-8" src="js/OptionsMenu.js"></script>
 <script type="text/javascript">
     var xml;
     $(document).ready(function(){
+		var onSettings = function() {
+		console.log("settings");
+		};
 		
+		var onHelp = function() {
+		console.log("help");
+		};
+		
+		var optionsmenu = new OptionsMenu({
+		id: "optionsmenu",
+		items: [
+		[ {
+		label: "Settings",
+		image: "menu/settings.png",
+		action: onSettings
+		},
+		{
+		label: "Help",
+		image: "menu/help.png",
+		action: onHelp
+		} ]
+		]
+		});
 		
 		
         $.ajax({
