--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
 		
 			function startup() {
 			console.log("Business time...");
-			alert('hey');
+			//alert('hey');
 			menuDiv = document.querySelector("#menu");
 			 
 			document.addEventListener("menubutton", doMenu, false);
@@ -87,11 +87,12 @@ display:none;
       </ul>
     </div>
     <!-- /contentprimary --> 
-  </div>
-  <div id="menu">
-    <a href="">Option One</a><br/>
-    <a href="">Option Two</a>
+    <div id="menu">
+        <a href="">Option One</a><br/>
+        <a href="">Option Two</a>
     </div>
+  </div>
+  
   <!-- /content -->
   <div data-role="footer" data-theme="a">
     <div data-role="navbar">
