--- a/www/index.html
+++ b/www/index.html
@@ -3,17 +3,14 @@
 <head>
 <meta charset="utf-8">
 <title>jQuery Mobile Web App</title>
-<<<<<<< HEAD
 <link rel="stylesheet" href="css/my-custom-theme.css" />
 <link rel="stylesheet" href="css/jquery.mobile.structure-1.3.1.min.css" />
 <link rel="stylesheet" href="css/my.css" />
 <script src="js/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="js/jquery.mobile-1.0.min.js" type="text/javascript"></script>
-=======
-
 <script src="js/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script type="text/javascript" charset="utf-8" src="js/cordova.js"></script>
->>>>>>> dd288544f9340e979b9d35eb4b283b9664024d69
+
 <script type="text/javascript">
     var xml;
     $(document).ready(function(){
@@ -43,14 +40,14 @@
 				//$('#list').listview('refresh');
             });
 			//alert(appitem);
-			//$("ul#list").append(appitem); 
+			$("ul#list").append(appitem); 
         }
 
 </script>
 </head> 
 <body> 
 
-<<<<<<< HEAD
+
 <div data-role="page">
   <div data-role="header" data-theme="a">
     <h1>Dua's List</h1>
@@ -73,15 +70,5 @@
   </div>
   <!-- /footer --> 
 </div>
-=======
-
-    <div id="menu">
-	    <a href="">Option One</a><br/>
-	    <a href="">Option Two</a>
-    </div>
-    <!-- /contentprimary --> 
->>>>>>> dd288544f9340e979b9d35eb4b283b9664024d69
-<!-- /page -->
-
 </body>
 </html>
